agregado el contenido adicional del blog y mejorando topografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,12 @@
                     inicio donde vamos a explicar
                     las cosas increibles que se
                     pueden hacer con ramas</p>
+                    <p>
+                        aqui estoy agregando un parrafo en html 
+                        lo cual no se ni un carajo y el man del 
+                        curso de git hub se embala y no ensena
+                        y promociona otro curso para que pagues 
+                        jajajajajajaja</p>
             </div>
         </div>
     </body>
