agrege oracion para subcribirse y cambio de cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">tu blog de 
-                confianza</span>
+                maestro</span>
             </div>
             <div id ="post">
                 <h1>Este es el titulo 
@@ -25,6 +25,7 @@
                         curso de git hub se embala y no ensena
                         y promociona otro curso para que pagues 
                         jajajajajajaja</p>
+                    <p>Subscribete y dale like</p>
             </div>
         </div>
     </body>
